[CCAP-934] Working functionality for looping over subflows